For Intuos3, use an additional bit from another data bucket. This is what the Linux driver does, thanks for idefix for tracking down the problem! Should fix ticket #5960, but I don't personally have the hardware. The change can only affect Intuos3 tablets, though.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@36791 a95241bf-73f2-0310-859d-f6bbb57e9c96